# 10th_grade_final_project

./: .gitignore  Dockerfile  README.md  compose.yml  manage.py  pyproject.toml
accounts/: forms.py  urls.py  views.py
accounts/templates/accounts/: preferences.html
accounts/templates/registration/: signup.html
api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_resultsession.py  0003_userquestionresult_result_session.py  0004_exam_pud_date.py  0005_userpreference.py  0006_remove_userpreference_theme_is_light_and_more.py  0007_rename_pud_date_exam_pub_date.py  0008_alter_userpreference_theme.py
nginx/: nginx.conf
sbeps/: asgi.py  settings.py  urls.py  wsgi.py
sbeps/templates/registration/registration/: login.html
static/accounts/: style.css
static/training/: style.css
static/utilities/: frappe.css  latte.css  macchiato.css  mocha.css  style.css
training/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
training/migrations/: 0001_initial.py  0002_rename_exum_exam.py  0003_remove_userquestionresult_answer_and_more.py
training/templates/training/: base.html  exam.html  exam_content.html  exam_result.html  exams_page.html  index.html
utilities/: accounts.py  exams.py
utilities/templates/utilities/: base.html  base_unauth.html
