[tool.poetry]
name = "10th-grade-final-project"
version = "0.1.0"
description = ""
authors = ["leterDieu <leterdieu@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.6"
psycopg2 = "^2.9.10"
gunicorn = "^23.0.0"
djangorestframework = "^3.15.2"
django-extensions = "^3.2.3"
pydotplus = "^2.0.2"
djangorestframework-simplejwt = "^5.4.0"
rest-framework-simplejwt = "^0.0.2"
pandas = "^2.2.3"
django-compressor = "^4.5.1"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}

[tool.poetry.group.dev.dependencies]
pydotplus = "^2.0.2"
django-extensions = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
